--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         </tbody>
     </table>
 </div>
-
+<script src="lib/jquery-3.5.1.min.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
